tdf#137804 Qt5 don't paint empty strings

For a test I added a SAL_WARN, but that created many more debug
messages then expected, just when opening the print dialog. So
this just handles the crash like the CairoTextRender variant of
DrawTextLayout does, by returning early.

Change-Id: Ie5b58ebbba02dace0e777b60fcbc3b9f46ea9d66
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104893
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>